tests/Rules/Aria/Fixtures/valid/aria_hidden_non_focusable.html.twig
<div aria-hidden="true">Hidden</div>
