tests/Rules/Aria/Fixtures/invalid/aria_invalid_value.html.twig
{# 1 errors #}
<div aria-hidden="maybe">bad</div>
